# oz_externship_be_template

./: pyproject.toml
.github/workflows/: checks.yml
apps/core/management/commands/: test.py
apps/core/utils/: isolated_cache_testcase.py
config/settings/: base.py  local.py
